<resources>
    <string name="app_name">UPCRide</string>
    <string name="tvInicio">UPCRide</string>
    <string name="etEmail">Correo UPC</string>
    <string name="etContraseña">Contraseña</string>
    <string name="etNombres">Nombres</string>
    <string name="etApellidos">Apellidos</string>
    <string name="etDNI">DNI</string>
    <string name="etDistrito">Distrito</string>
    <string name="etTelefono">Telefono</string>
    <string name="spSede">Sede</string>
    <string name="tvRegistroConductor">Registro Conductor</string>
    <string name="tvRegistroPasajero">Registro Pasajero</string>
    <string name="btnRegistrar">Siguiente</string>
    <string name="btnIrRegistro">Registrarme</string>
    <string name="btnIrPublicacion">PUBLICAR</string>
    <string name="btnIrInicio">IR AL INICIO</string>
    <string name="etMensaje">Breve mensaje</string>
    <string name="etPuntoPartida">Punto de partida</string>
    <string name="etPuntoDestino">Punto de destino</string>
    <string name="etHoraPartida">Hora Partida</string>
    <string name="etHoraLlegada">Hora Llegada</string>
    <string name="etPrecioBase">Precio</string>
    <string name="btnPublicar">Publicar</string>
    <string name="tvBienvenido">Bienvenido a UPCRide</string>
    <string name="btnIniciarSesion">INICIAR SESIÓN</string>
    <string name="btnRegistrarme">Registrarme</string>

    <string name="nat_inicio">Inicio</string>
    <string name="nat_viajes">Viajes</string>
    <string name="nat_solicitudes">Solicitudes</string>
    <string name="nat_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbarText">Inicio</string>
    <string name="history">Historial</string>
    <string name="pendientes">Pendientes</string>


    <!--Solicitar-->
    <string name="tvConductorSol">Conductor:</string>
    <string name="tvMensajeSol">Mensaje:</string>
    <string name="tvPuntoPartidaSol">Punto de partida:</string>
    <string name="tvPuntoDestinoSol">Punto de destino:</string>
</resources>

