<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.publicar_viaje">


    <fragment
        android:id="@+id/publicacionMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="370dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPublicar"
        android:layout_width="194dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnPublicar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/publicacionMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioBase"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etHoraPartida"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/etHoraPartida"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/etHoraLlegada"
        app:layout_constraintEnd_toStartOf="@+id/etPrecioBase"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etHoraLlegada"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/etHoraLlegada"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/btnPublicar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPrecioBase"
        android:layout_width="194dp"
        android:layout_height="38dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/etPrecioBase"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHoraPartida"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPuntoDestino"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/etPuntoDestino"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etHoraPartida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPuntoPartida"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/etPuntoPartida"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPuntoDestino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="335dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/etMensaje"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPuntoPartida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>