<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Bienvenido">

    <Button
        android:id="@+id/btnRegistrarme"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button2"
        android:text="@string/tvRegistroConductor"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarPasajero" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="114dp"
        android:layout_marginTop="160dp"
        android:text="@string/tvBienvenido"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/tvBienvenido" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="268dp"
        android:layout_height="59dp"
        android:text="La mejor forma de viajar y conocer compañeros en la UPC!"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="276dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/l"
        android:text="@string/btnIniciarSesion"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarme"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistrarPasajero"
        android:layout_width="268dp"
        android:layout_height="37dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/button2"
        android:text="@string/tvRegistroPasajero"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>