<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_surface"
    tools:context=".activities.FiltrarFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="413dp"
        android:layout_height="662dp"
        android:src="@drawable/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="361dp"
        android:layout_height="334dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195">

        <Button
            android:id="@+id/filtroBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="255dp"
            android:layout_marginTop="275dp"
            android:backgroundTint="@android:color/transparent"
            android:text="Buscar" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="107dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etPuntoPartida2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/etPuntoPartida"
                android:inputType="time"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="@+id/etHoraLlegada"
                app:layout_constraintEnd_toStartOf="@+id/etPrecioBase"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:src="@drawable/divider4" />

            <EditText
                android:id="@+id/etPuntoDestino2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/etPuntoDestino"
                android:inputType="time"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="18dp"
            android:layout_height="68dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="38dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/left" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="107dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="160dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etHoraPartida2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/etHoraPartida"
                android:inputType="time"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="@+id/etHoraLlegada"
                app:layout_constraintEnd_toStartOf="@+id/etPrecioBase"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:src="@drawable/divider4" />

            <EditText
                android:id="@+id/etHoraLlegada2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/etHoraLlegada"
                android:inputType="time"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.84"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>